docs: L10-quality Javadoc across all production source files
- BootstrapDispatcher: full docs on all 42 dispatch methods including classloader
  isolation pattern, reentrancy guard semantics, fallback behaviour per method
- BridgeDelegate: contract docs on all 27 interface methods
- ChaosRuntime: class-level architecture overview (request flow, thread-safety,
  lifecycle), per-method docs on all public and package-private methods
- ScenarioController: docs on state machine transitions, rate-limit window,
  probability sampling, activation window, stressor lifecycle
- ScenarioRegistry: concurrency model, match/sort contract
- SelectorMatcher: matching semantics per selector type
- CompatibilityValidator: validation rules documented per constraint
- All 14 stressor classes: class-level what/why/how, constructor params,
  close() resource-release contract, thread-safety guarantees
- JvmRuntimeAdvice: every inner Advice class documents what JDK method it
  intercepts, which OperationType it maps to, and skip/return semantics
- JdkInstrumentationInstaller: install() flow, buildMethodHandles() slot mapping,
  instrumentOptional() contract
- InvocationContext, RuntimeDecision, TerminalAction, TerminalKind: field
  semantics and invariants
- ClockSkewState: mode behaviour (FIXED/DRIFT/FREEZE), thread-safety of drift counter
- ReturnValueCorruptor: strategy fallback table, type-safety contract
- ObservabilityBus, ManualGate, FeatureSet, ScopeContext: full method docs
- GateAction, ScenarioContribution: record component semantics
- ChaosAgentBootstrap, ChaosPlatform: lifecycle and idempotency guarantees
- JFR classes: event field semantics, registration lifecycle
- startup-config module: AgentArgsParser escape rules, ChaosPlanMapper round-trip
- testkit module: ChaosAgentExtension store lifecycle, parameter resolution contract
- Fixed cross-module @link references (bootstrap/instrumentation) replaced with
  @code to avoid javadoc -Werror failures